--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "jest:integration": "jest -c integration/jest.config.js",
+    "test:integration": "start-server-and-test storybook http-get://localhost:9009 jest:integration"
   },
   "eslintConfig": {
     "extends": [
@@ -61,6 +63,10 @@
     "@storybook/node-logger": "6.5.13",
     "@storybook/preset-create-react-app": "4.1.2",
     "@storybook/react": "6.5.13",
+    "jest-image-snapshot": "^6.1.0",
+    "jest-puppeteer": "^7.0.0",
+    "puppeteer": "^19.6.3",
+    "start-server-and-test": "^1.15.3",
     "webpack": "5"
   }
 }
