--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "todo15v3",
+  "homepage": "https://vadimlyutsko.github.io/Great-Todolist",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,6 +18,8 @@
     "@types/react-redux": "7.1.24",
     "@types/uuid": "^9.0.1",
     "axios": "1.1.3",
+    "eslint": "8.22.0",
+    "gh-pages": "4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "8.0.4",
@@ -31,7 +34,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
