--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "todo15v3",
-  "homepage": "https://vadimlyutsko.github.io/Great-Todolist",
+  "name": "todo16v3",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,12 +13,9 @@
     "@types/jest": "29.2.0",
     "@types/node": "18.11.7",
     "@types/react": "18.0.24",
-    "@types/react-dom": "18.0.7",
+    "@types/react-dom": "18.0.8",
     "@types/react-redux": "7.1.24",
-    "@types/uuid": "^9.0.1",
     "axios": "1.1.3",
-    "eslint": "8.22.0",
-    "gh-pages": "4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "8.0.4",
@@ -27,16 +23,13 @@
     "redux": "4.2.0",
     "redux-thunk": "2.4.1",
     "typescript": "4.8.4",
-    "uuid": "^9.0.0",
     "web-vitals": "3.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -58,8 +51,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "eslint-config-react-app": "^7.0.1"
   }
 }
