--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "todo16v3",
+  "name": "Great-Todolist",
+  "homepage": "https://vadimlyutsko.github.io/Great-Todolist",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,6 +16,7 @@
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
     "@types/react-redux": "7.1.24",
+    "gh-pages": "4.0.0",
     "axios": "1.1.3",
     "formik": "^2.2.9",
     "react": "18.2.0",
@@ -31,7 +33,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
